# week08-homework

./: README.md
dstoolbox/: pycaretflow.py  pyproject.toml  requirements.txt
dstoolbox/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
dstoolbox/catboost_info/learn/: events.out.tfevents
pycaret-mcp-server/: README.md  server.py  test_manual.py
pycaret-mcp-server/core/: config.py  execution.py  metadata.py  utils.py
