[project]
name = "dstoolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.5",
    "ipython>=8.38.0",
    "mcp[cli]>=1.26.0",
    "pandas>=2.1.4",
    "psutil>=7.2.1",
    "pycaret[full]>=3.2.0",
    "uvicorn>=0.40.0",
]
